examples/test/testpolicy238.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy238
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key28: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value37
          key19: value8
          key25: value34
      podSelector:
        matchLabels:
          key15: value6
          key30: value20
          key26: value21
